--- a/Homeworks/Homework2/Homework2Windows/Homework2Windows/Homework2Windows.vcxproj
+++ b/Homeworks/Homework2/Homework2Windows/Homework2Windows/Homework2Windows.vcxproj
@@ -11,9 +11,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{172FB090-51F3-4B65-995A-31CB9B5D8913}</ProjectGuid>
+    <ProjectGuid>{55D57C4A-3784-436E-8ABD-660833176046}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>Homework2</RootNamespace>
+    <RootNamespace>Homework2Windows</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -51,10 +51,8 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AssemblerOutput>AssemblyAndSourceCode</AssemblerOutput>
-      <AssemblerListingLocation>hello.asm</AssemblerListingLocation>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
